# nano-lgn

./: .gitignore  README.md  pyproject.toml
configs/: poc_a_lgn.py  poc_a_lgn_topk.py  poc_a_mlp.py  poc_b_lgn.py  poc_b_mlp.py
docs/superpowers/plans/: 2026-05-12-lgn-mlp-block-poc.md  2026-05-15-lgn-grad-diagnostic.md
docs/superpowers/specs/: 2026-05-12-lgn-mlp-block-poc-design.md  2026-05-15-lgn-grad-diagnostic-design.md
nanolgn/: __init__.py  config.py  data.py  gates.py  gpt.py  lgn.py  lgn_mlp.py
scripts/: diagnose_lgn_grads.py  prepare_tinystories.py  train.py
tests/: test_config.py  test_data.py  test_gates.py  test_gpt.py  test_lgn.py  test_lgn_mlp.py  test_logging.py  test_smoke_train.py
