[project]
name = "nano-lgn"
version = "0.0.1"
description = "Replacing nanochat's MLP block with a Differentiable Logic Gate Network."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "datasets>=2.18",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-xdist>=3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanolgn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: end-to-end smoke training; opt in with -m slow",
]
